test/io/ferguson/asserteof.good
Past First Check
asserteof.chpl:28: error: uncaught error - syserr: assert failed - Not at EOF with path "asserteof.test.nums" offset 3
